// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders results, previous and next 1`] = `
<div>
  <div>
    <div>
      Showing 13 - 15 of 20 results
    </div>
  </div>
  <div>
    <div>
      <a
        href="./4"
      >
        <div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="8cd5ea7b91eea38d77fd9ad20f3573cb"
              />
            </g>
          </svg>
          <div>
            <span>
              Previous
              <span>
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
    <div>
      <a
        href="./6"
      >
        <div>
          <div>
            <span>
              Next
              <span>
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="9a11f164df72df4cb9ea6a3266824472"
              />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`2. renders with no results 1`] = `
<div>
  <div>
    <div>
      <a
        href="./4"
      >
        <div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="8cd5ea7b91eea38d77fd9ad20f3573cb"
              />
            </g>
          </svg>
          <div>
            <span>
              Previous
              <span>
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
    <div>
      <a
        href="./6"
      >
        <div>
          <div>
            <span>
              Next
              <span>
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="9a11f164df72df4cb9ea6a3266824472"
              />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`3. does not give a count smaller than a single page 1`] = `
<div>
  <div>
    <div>
      Showing 1 - 20 of 20 results
    </div>
  </div>
  <div>
    <div />
    <div />
  </div>
</div>
`;

exports[`4. limits the starting result to the total count 1`] = `
<div>
  <div>
    <div>
      Showing 20 - 20 of 20 results
    </div>
  </div>
  <div>
    <div>
      <a
        href="./3"
      >
        <div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="8cd5ea7b91eea38d77fd9ad20f3573cb"
              />
            </g>
          </svg>
          <div>
            <span>
              Previous
              <span>
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
    <div />
  </div>
</div>
`;

exports[`5. renders previous and not next 1`] = `
<div>
  <div>
    <div>
      <a
        href="./4"
      >
        <div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="8cd5ea7b91eea38d77fd9ad20f3573cb"
              />
            </g>
          </svg>
          <div>
            <span>
              Previous
              <span>
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
    <div />
  </div>
</div>
`;

exports[`6. renders next and not previous 1`] = `
<div>
  <div>
    <div />
    <div>
      <a
        href="./2"
      >
        <div>
          <div>
            <span>
              Next
              <span>
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="9a11f164df72df4cb9ea6a3266824472"
              />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;
